--- a/ProjetEvent/View Controllers/Menu/CreditCard/AddCreditCardViewController.xib
+++ b/ProjetEvent/View Controllers/Menu/CreditCard/AddCreditCardViewController.xib
@@ -1,11 +1,11 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="13771" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="13529" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES">
     <device id="retina4_7" orientation="portrait">
         <adaptation id="fullscreen"/>
     </device>
     <dependencies>
         <deployment identifier="iOS"/>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="13772"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="13527"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
@@ -25,26 +25,8 @@
             <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
             <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
             <subviews>
-                <navigationBar contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="E81-uf-rRd">
-                    <rect key="frame" x="0.0" y="0.0" width="375" height="44"/>
-                    <items>
-                        <navigationItem title="New Credit Card" id="6St-ID-yhk">
-                            <barButtonItem key="leftBarButtonItem" title="Back" id="UoF-H8-5rO">
-                                <connections>
-                                    <action selector="back:" destination="-1" id="uW9-uP-0OW"/>
-                                </connections>
-                            </barButtonItem>
-                            <barButtonItem key="rightBarButtonItem" title="Confirm" id="6ah-8U-oib">
-                                <color key="tintColor" red="1" green="0.02654661375" blue="0.029965965939999999" alpha="1" colorSpace="custom" customColorSpace="displayP3"/>
-                                <connections>
-                                    <action selector="saveMe:" destination="-1" id="MiZ-Nd-hsk"/>
-                                </connections>
-                            </barButtonItem>
-                        </navigationItem>
-                    </items>
-                </navigationBar>
                 <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" translatesAutoresizingMaskIntoConstraints="NO" id="sVc-rt-EaU">
-                    <rect key="frame" x="16" y="69" width="339" height="60"/>
+                    <rect key="frame" x="16" y="136" width="339" height="60"/>
                     <subviews>
                         <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Card owner name..." textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="xlq-X6-ZEW">
                             <rect key="frame" x="0.0" y="0.0" width="339" height="30"/>
@@ -67,7 +49,7 @@
                     </subviews>
                 </stackView>
                 <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Expiry date..." textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="zdV-tx-FYN">
-                    <rect key="frame" x="16" y="144" width="339" height="30"/>
+                    <rect key="frame" x="16" y="211" width="339" height="30"/>
                     <nil key="textColor"/>
                     <fontDescription key="fontDescription" type="system" pointSize="14"/>
                     <textInputTraits key="textInputTraits"/>
@@ -76,7 +58,7 @@
                     </connections>
                 </textField>
                 <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="CVV" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="TBW-9o-aCG">
-                    <rect key="frame" x="16" y="189" width="339" height="30"/>
+                    <rect key="frame" x="16" y="256" width="339" height="30"/>
                     <nil key="textColor"/>
                     <fontDescription key="fontDescription" type="system" pointSize="14"/>
                     <textInputTraits key="textInputTraits"/>
@@ -84,16 +66,34 @@
                         <action selector="textEditingChanged:" destination="-1" eventType="editingDidEnd" id="zuP-wI-h0b"/>
                     </connections>
                 </textField>
+                <navigationBar contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="E81-uf-rRd">
+                    <rect key="frame" x="0.0" y="20" width="375" height="44"/>
+                    <items>
+                        <navigationItem title="New Credit Card" id="6St-ID-yhk">
+                            <barButtonItem key="leftBarButtonItem" title="Back" id="UoF-H8-5rO">
+                                <connections>
+                                    <action selector="back:" destination="-1" id="uW9-uP-0OW"/>
+                                </connections>
+                            </barButtonItem>
+                            <barButtonItem key="rightBarButtonItem" title="Confirm" id="6ah-8U-oib">
+                                <color key="tintColor" red="1" green="0.02654661375" blue="0.029965965939999999" alpha="1" colorSpace="custom" customColorSpace="displayP3"/>
+                                <connections>
+                                    <action selector="saveMe:" destination="-1" id="MiZ-Nd-hsk"/>
+                                </connections>
+                            </barButtonItem>
+                        </navigationItem>
+                    </items>
+                </navigationBar>
             </subviews>
             <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
             <constraints>
-                <constraint firstItem="fnl-2z-Ty3" firstAttribute="bottom" secondItem="TBW-9o-aCG" secondAttribute="bottom" constant="448" id="1bS-HE-fSt"/>
+                <constraint firstItem="fnl-2z-Ty3" firstAttribute="bottom" secondItem="TBW-9o-aCG" secondAttribute="bottom" constant="381" id="1bS-HE-fSt"/>
                 <constraint firstItem="E81-uf-rRd" firstAttribute="leading" secondItem="i5M-Pr-FkT" secondAttribute="leading" id="B47-kt-Gak"/>
                 <constraint firstItem="sVc-rt-EaU" firstAttribute="leading" secondItem="fnl-2z-Ty3" secondAttribute="leading" constant="16" id="E4m-IU-CIY"/>
                 <constraint firstItem="fnl-2z-Ty3" firstAttribute="trailing" secondItem="TBW-9o-aCG" secondAttribute="trailing" constant="20" id="Eqi-HR-7nG"/>
                 <constraint firstItem="TBW-9o-aCG" firstAttribute="leading" secondItem="fnl-2z-Ty3" secondAttribute="leading" constant="16" id="ExG-dW-NH0"/>
-                <constraint firstItem="E81-uf-rRd" firstAttribute="top" secondItem="i5M-Pr-FkT" secondAttribute="top" id="OZi-zV-vKU"/>
-                <constraint firstItem="sVc-rt-EaU" firstAttribute="top" secondItem="fnl-2z-Ty3" secondAttribute="top" constant="49" id="PAa-nw-6Bh"/>
+                <constraint firstItem="E81-uf-rRd" firstAttribute="top" secondItem="i5M-Pr-FkT" secondAttribute="top" constant="20" id="OZi-zV-vKU"/>
+                <constraint firstItem="sVc-rt-EaU" firstAttribute="top" secondItem="fnl-2z-Ty3" secondAttribute="top" constant="116" id="PAa-nw-6Bh"/>
                 <constraint firstItem="fnl-2z-Ty3" firstAttribute="trailing" secondItem="zdV-tx-FYN" secondAttribute="trailing" constant="20" id="aWY-wb-YwC"/>
                 <constraint firstItem="zdV-tx-FYN" firstAttribute="leading" secondItem="fnl-2z-Ty3" secondAttribute="leading" constant="16" id="ak6-k0-ONQ"/>
                 <constraint firstItem="fnl-2z-Ty3" firstAttribute="trailing" secondItem="sVc-rt-EaU" secondAttribute="trailing" constant="20" id="biF-RT-yep"/>
@@ -102,7 +102,7 @@
                 <constraint firstItem="zdV-tx-FYN" firstAttribute="top" secondItem="bYJ-Ui-VIo" secondAttribute="bottom" constant="15" id="ysv-uC-dfW"/>
             </constraints>
             <viewLayoutGuide key="safeArea" id="fnl-2z-Ty3"/>
-            <point key="canvasLocation" x="34.5" y="69.5"/>
+            <point key="canvasLocation" x="44" y="81"/>
         </view>
     </objects>
 </document>
