--- a/ProjetEvent/View Controllers/create Account/CreateAccountViewController.xib
+++ b/ProjetEvent/View Controllers/create Account/CreateAccountViewController.xib
@@ -33,10 +33,10 @@
             <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
             <subviews>
                 <scrollView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="7YL-rb-YIh">
-                    <rect key="frame" x="0.0" y="68" width="375" height="599"/>
+                    <rect key="frame" x="0.0" y="88" width="375" height="579"/>
                 </scrollView>
                 <navigationBar contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="urh-qg-BOY">
-                    <rect key="frame" x="0.0" y="20" width="375" height="48"/>
+                    <rect key="frame" x="0.0" y="40" width="375" height="48"/>
                     <items>
                         <navigationItem title="Inscription" id="OgX-73-pSw">
                             <barButtonItem key="leftBarButtonItem" systemItem="cancel" id="cg2-bI-D3f">
@@ -61,9 +61,9 @@
                 <constraint firstItem="fnl-2z-Ty3" firstAttribute="trailing" secondItem="7YL-rb-YIh" secondAttribute="trailing" id="eXO-V4-gGy"/>
                 <constraint firstItem="7YL-rb-YIh" firstAttribute="top" secondItem="urh-qg-BOY" secondAttribute="bottom" id="iCy-dd-HRO"/>
                 <constraint firstItem="7YL-rb-YIh" firstAttribute="leading" secondItem="fnl-2z-Ty3" secondAttribute="leading" id="nEn-xV-yuv"/>
-                <constraint firstItem="7YL-rb-YIh" firstAttribute="top" secondItem="fnl-2z-Ty3" secondAttribute="top" constant="48" id="olH-eb-zfz"/>
+                <constraint firstItem="7YL-rb-YIh" firstAttribute="top" secondItem="fnl-2z-Ty3" secondAttribute="top" constant="68" id="olH-eb-zfz"/>
                 <constraint firstItem="fnl-2z-Ty3" firstAttribute="trailing" secondItem="urh-qg-BOY" secondAttribute="trailing" id="sVx-9V-O9Z"/>
-                <constraint firstItem="fnl-2z-Ty3" firstAttribute="top" secondItem="urh-qg-BOY" secondAttribute="top" id="uAm-bb-nWw"/>
+                <constraint firstItem="fnl-2z-Ty3" firstAttribute="top" secondItem="urh-qg-BOY" secondAttribute="top" constant="-20" id="uAm-bb-nWw"/>
             </constraints>
             <viewLayoutGuide key="safeArea" id="fnl-2z-Ty3"/>
             <point key="canvasLocation" x="304.5" y="56.5"/>
