--- a/ProjetEvent/View Controllers/Events/Form Event/AddEvent/AddEventViewController.xib
+++ b/ProjetEvent/View Controllers/Events/Form Event/AddEvent/AddEventViewController.xib
@@ -1,10 +1,11 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="13771" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="13529" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES">
     <device id="retina4_7" orientation="portrait">
         <adaptation id="fullscreen"/>
     </device>
     <dependencies>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="13772"/>
+        <deployment identifier="iOS"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="13527"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
@@ -25,52 +26,8 @@
             <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
             <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
             <subviews>
-                <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Description" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="3xV-5f-NEX" customClass="LinkedTextField" customModule="ProjetEvent" customModuleProvider="target">
-                    <rect key="frame" x="55" y="306" width="290" height="30"/>
-                    <nil key="textColor"/>
-                    <fontDescription key="fontDescription" type="system" pointSize="14"/>
-                    <textInputTraits key="textInputTraits"/>
-                    <connections>
-                        <action selector="textEditingChanged:" destination="-1" eventType="editingDidEnd" id="bHq-hm-bG6"/>
-                        <outlet property="delegate" destination="-1" id="czA-ZI-Inj"/>
-                    </connections>
-                </textField>
-                <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Event" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="XRX-sb-fKt" customClass="LinkedTextField" customModule="ProjetEvent" customModuleProvider="target">
-                    <rect key="frame" x="55" y="122" width="290" height="30"/>
-                    <nil key="textColor"/>
-                    <fontDescription key="fontDescription" type="system" pointSize="14"/>
-                    <textInputTraits key="textInputTraits"/>
-                    <connections>
-                        <action selector="textEditingChanged:" destination="-1" eventType="editingDidEnd" id="wLh-RZ-8zE"/>
-                        <outlet property="delegate" destination="-1" id="EDD-9d-B6N"/>
-                        <outlet property="nextField" destination="Lgs-V4-aUz" id="0Qt-6C-z6g"/>
-                        <outlet property="pasteDelegate" destination="b70-Rr-mO9" id="riB-AL-dWi"/>
-                    </connections>
-                </textField>
-                <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Arrival" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="w8F-Xl-1Zf" customClass="LinkedTextField" customModule="ProjetEvent" customModuleProvider="target">
-                    <rect key="frame" x="55" y="238" width="290" height="30"/>
-                    <nil key="textColor"/>
-                    <fontDescription key="fontDescription" type="system" pointSize="14"/>
-                    <textInputTraits key="textInputTraits" keyboardType="numberPad"/>
-                    <connections>
-                        <action selector="textEditingChanged:" destination="-1" eventType="editingDidEnd" id="CKR-O5-xZb"/>
-                        <outlet property="delegate" destination="-1" id="X5y-0g-phN"/>
-                        <outlet property="nextField" destination="3xV-5f-NEX" id="yBB-BA-NeE"/>
-                    </connections>
-                </textField>
-                <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Departure" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="Lgs-V4-aUz" customClass="LinkedTextField" customModule="ProjetEvent" customModuleProvider="target">
-                    <rect key="frame" x="55" y="176" width="290" height="30"/>
-                    <nil key="textColor"/>
-                    <fontDescription key="fontDescription" type="system" pointSize="14"/>
-                    <textInputTraits key="textInputTraits" keyboardType="numberPad"/>
-                    <connections>
-                        <action selector="textEditingChanged:" destination="-1" eventType="editingDidEnd" id="aYb-R5-d9K"/>
-                        <outlet property="delegate" destination="-1" id="YCp-iU-sG8"/>
-                        <outlet property="nextField" destination="w8F-Xl-1Zf" id="bnI-c1-h0t"/>
-                    </connections>
-                </textField>
                 <navigationBar contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="yzZ-Ce-Fzu">
-                    <rect key="frame" x="0.0" y="20" width="375" height="44"/>
+                    <rect key="frame" x="0.0" y="37" width="375" height="44"/>
                     <items>
                         <navigationItem title="Add Event" id="b70-Rr-mO9">
                             <barButtonItem key="leftBarButtonItem" systemItem="cancel" id="LGF-XM-ve2">
@@ -86,6 +43,50 @@
                         </navigationItem>
                     </items>
                 </navigationBar>
+                <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Description" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="3xV-5f-NEX" customClass="LinkedTextField" customModule="ProjetEvent" customModuleProvider="target">
+                    <rect key="frame" x="55" y="337" width="290" height="30"/>
+                    <nil key="textColor"/>
+                    <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                    <textInputTraits key="textInputTraits"/>
+                    <connections>
+                        <action selector="textEditingChanged:" destination="-1" eventType="editingDidEnd" id="bHq-hm-bG6"/>
+                        <outlet property="delegate" destination="-1" id="czA-ZI-Inj"/>
+                    </connections>
+                </textField>
+                <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Event" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="XRX-sb-fKt" customClass="LinkedTextField" customModule="ProjetEvent" customModuleProvider="target">
+                    <rect key="frame" x="55" y="153" width="290" height="30"/>
+                    <nil key="textColor"/>
+                    <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                    <textInputTraits key="textInputTraits"/>
+                    <connections>
+                        <action selector="textEditingChanged:" destination="-1" eventType="editingDidEnd" id="wLh-RZ-8zE"/>
+                        <outlet property="delegate" destination="-1" id="EDD-9d-B6N"/>
+                        <outlet property="nextField" destination="Lgs-V4-aUz" id="0Qt-6C-z6g"/>
+                        <outlet property="pasteDelegate" destination="b70-Rr-mO9" id="riB-AL-dWi"/>
+                    </connections>
+                </textField>
+                <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Arrival" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="w8F-Xl-1Zf" customClass="LinkedTextField" customModule="ProjetEvent" customModuleProvider="target">
+                    <rect key="frame" x="55" y="269" width="290" height="30"/>
+                    <nil key="textColor"/>
+                    <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                    <textInputTraits key="textInputTraits" keyboardType="numberPad"/>
+                    <connections>
+                        <action selector="textEditingChanged:" destination="-1" eventType="editingDidEnd" id="CKR-O5-xZb"/>
+                        <outlet property="delegate" destination="-1" id="X5y-0g-phN"/>
+                        <outlet property="nextField" destination="3xV-5f-NEX" id="yBB-BA-NeE"/>
+                    </connections>
+                </textField>
+                <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Departure" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="Lgs-V4-aUz" customClass="LinkedTextField" customModule="ProjetEvent" customModuleProvider="target">
+                    <rect key="frame" x="55" y="207" width="290" height="30"/>
+                    <nil key="textColor"/>
+                    <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                    <textInputTraits key="textInputTraits" keyboardType="numberPad"/>
+                    <connections>
+                        <action selector="textEditingChanged:" destination="-1" eventType="editingDidEnd" id="aYb-R5-d9K"/>
+                        <outlet property="delegate" destination="-1" id="YCp-iU-sG8"/>
+                        <outlet property="nextField" destination="w8F-Xl-1Zf" id="bnI-c1-h0t"/>
+                    </connections>
+                </textField>
             </subviews>
             <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
             <constraints>
@@ -99,9 +100,9 @@
                 <constraint firstItem="fnl-2z-Ty3" firstAttribute="trailing" secondItem="yzZ-Ce-Fzu" secondAttribute="trailing" id="ZSJ-Uu-F8o"/>
                 <constraint firstItem="XRX-sb-fKt" firstAttribute="leading" secondItem="fnl-2z-Ty3" secondAttribute="leading" constant="55" id="ZrJ-25-HC8"/>
                 <constraint firstItem="yzZ-Ce-Fzu" firstAttribute="leading" secondItem="fnl-2z-Ty3" secondAttribute="leading" id="gXP-Vc-eDA"/>
-                <constraint firstItem="yzZ-Ce-Fzu" firstAttribute="top" secondItem="fnl-2z-Ty3" secondAttribute="top" id="gwy-RS-4yB"/>
+                <constraint firstItem="yzZ-Ce-Fzu" firstAttribute="top" secondItem="fnl-2z-Ty3" secondAttribute="top" constant="17" id="gwy-RS-4yB"/>
                 <constraint firstItem="w8F-Xl-1Zf" firstAttribute="leading" secondItem="fnl-2z-Ty3" secondAttribute="leading" constant="55" id="ibO-eN-QjK"/>
-                <constraint firstItem="XRX-sb-fKt" firstAttribute="top" secondItem="fnl-2z-Ty3" secondAttribute="top" constant="102" id="owl-GZ-tnG"/>
+                <constraint firstItem="XRX-sb-fKt" firstAttribute="top" secondItem="fnl-2z-Ty3" secondAttribute="top" constant="133" id="owl-GZ-tnG"/>
                 <constraint firstItem="Lgs-V4-aUz" firstAttribute="top" secondItem="XRX-sb-fKt" secondAttribute="bottom" constant="24" id="r3B-Mb-CTG"/>
                 <constraint firstItem="3xV-5f-NEX" firstAttribute="top" secondItem="w8F-Xl-1Zf" secondAttribute="bottom" constant="38" id="w9x-Ie-4fc"/>
             </constraints>
